--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,6 +1,5 @@
 <html>
-<body style="background: green; text: white">
+<body style="background: green; color: white">
     <h1>GitOps rocks!</h1>
 </body>
 </html>
-
