--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background: green; color: white">
+<body style="background: blue; color: white">
     <h1>GitOps rocks!</h1>
 </body>
 </html>
